# smrgygurdy

./: .Makefile.swp  AUTHORS  ChangeLog  Controller.cpp  Controller.h  Doxyfile  Factory.cpp  Keyboard.h  Lock.cpp  Lock.h  MCCLIBHID.1.40.tgz  Makefile  Makefile.am  MiniLAB1008.cpp  NEWS  OutputDirect.cpp  OutputMixer.cpp  OutputMixer.h  Pedal.cpp  Pedal.h  PlayoutThread.cpp  PlayoutThread.h  README  README.md  SoundModel.h  SoundModelMono.cpp  SoundModelPoly.cpp  StringAllocator.cpp  StringAllocator.h  Thread.cpp  Thread.h  config  config.h.in  configure.ac  main.cpp  parameters.py  smrgygurdy.conf
Arduino/: README.md
Arduino/digipedal/: digipedal.ino
doc/: Controller_8h_source.html  Factory_8h_source.html  Keyboard_8h_source.html  Lock_8h_source.html  OutputDirect_8h_source.html  OutputMixer_8h_source.html  OutputSink_8h_source.html  Pedal_8h_source.html  PlayoutThread_8h_source.html  SoundModelMono_8h_source.html  SoundModelPoly_8h_source.html  SoundModel_8h_source.html  StringAllocator_8h_source.html  Thread_8h_source.html  annotated.html  classBroadcastFailException.html  classConditionVariableDestructionException.html  classController-members.html  classController.html  classKeyboard-members.html  classKeyboard.html  classLock-members.html  classLock.html  classLockAcquireException.html  classLockReleaseException.html  classMutexDestructionException.html  classOutputDirect-members.html  classOutputDirect.html  classOutputDirect_1_1UnableToOpenPCMException.html  classOutputMixer-members.html  classOutputMixer.html  classOutputSink-members.html  classOutputSink.html  classOutputSink_1_1UnableToOpenPCMException.html  classPedal-members.html  classPedal.html  classPlayoutThread-members.html  classPlayoutThread.html  classSoundModel-members.html  classSoundModel.html  (+21 more)
doc/search/: all_61.html  all_62.html  all_63.html  all_67.html  all_69.html  all_6b.html  all_6c.html  all_6e.html  all_6f.html  all_70.html  all_73.html  all_74.html  all_75.html  all_77.html  all_7e.html  classes_62.html  classes_63.html  classes_6b.html  classes_6c.html  classes_6d.html  classes_6f.html  classes_70.html  classes_73.html  classes_74.html  classes_77.html  functions_62.html  functions_63.html  functions_6a.html  functions_6b.html  functions_6c.html  functions_6f.html  functions_70.html  functions_72.html  functions_73.html  functions_74.html  functions_77.html  search.js
src/: ALSAAdaptor.cpp  ALSAAdaptor.h  Comedi.cpp  Comedi.h  Controller.cpp  Controller.h  DummyPedal.cpp  DummyPedal.h  Factory.h  JACKAdaptor.cpp  JACKAdaptor.h  JackOutputMixer.cpp  JackOutputMixer.h  Keyboard.cpp  Keyboard.h  Lock.cpp  Makefile.am  MiniLAB1008.cpp  MiniLAB1008.h  ModulationEventListener.cpp  ModulationEventListener.h  ModulationPedal.cpp  ModulationPedal.h  OutputAdaptor.h  OutputDirect.cpp  OutputDirect.h  OutputMixer.cpp  OutputMixer.h  OutputSink.h  Pedal.cpp  Pedal.h  PlayoutThread.cpp  PlayoutThread.h  SerialPedal.cpp  SerialPedal.h  SoundModel.h  SoundModelMono.cpp  SoundModelMono.h  SoundModelPoly.cpp  SoundModelPoly.h  (+9 more)
